--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="{{ lang|default('en') }}">
 <head>
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ title or "Tech Communism · Контуры будущего" }}</title>
+  <title>{{ title or "Коммунизм - технологические контуры будущего" }}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
